<resources>
    <string name="app_name">RedPacketDemo</string>
    <string name="my_invite_code">我的邀请码：</string>
    <string name="copy">复制</string>
    <string name="rmb">¥</string>
    <string name="today_yg">今日预估</string>
    <string name="now_month_yg">本月预估</string>
    <string name="last_month_yg">上月预估</string>
    <string name="money_condition">赚钱情况</string>
    <string name="income">收入</string>
    <string name="withdraw">提现</string>
    <string name="team">团队</string>
    <string name="order">订单</string>
    <string name="my_service">我的服务</string>
    <string name="share_money">分享赚钱</string>
    <string name="income_list">收入榜单</string>
    <string name="my_collection">我的收藏</string>
    <string name="money_idea">赚钱攻略</string>
</resources>
